tests/snapshots/examples_fixtures/type_inference__expression_validation_polymorphic_uses.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_inference/expression_validation_polymorphic_uses.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
