tests/snapshots/examples_fixtures/type_inference__numeric_defaulting_explicit_bound.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_inference/numeric_defaulting_explicit_bound.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
