tests/snapshots/examples_fixtures/type_inference__numeric_defaulting_local_let.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_inference/numeric_defaulting_local_let.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
