tests/snapshots/examples_fixtures/type_inference__numeric_defaulting_mixed_constraints.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_inference/numeric_defaulting_mixed_constraints.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
