tests/snapshots/examples_fixtures/type_inference__numeric_defaulting_polymorphic_num.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_inference/numeric_defaulting_polymorphic_num.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
